# pyproject.toml
[build-system]
requires = ["hatchling"]  # You can replace "hatchling" with "setuptools" if preferred
build-backend = "hatchling.build"  # Or "setuptools.build_meta" if using setuptools

[project]
name = "vector-transform"
version = "0.1.0"
authors = [
  { name = "Pramod Yadav", email = "pkyadav01234@gmail.com" },
]
description = "A package for vector transformations and decorators"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.5.0",
  "matplotlib>=3.5.0",
  "scipy>=1.7.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
